Fixing z-index in IE7.

--- a/sites/all/themes/ginkgo/theme.css
+++ b/sites/all/themes/ginkgo/theme.css
@@ -13,6 +13,8 @@ body.anonymous-login #page div.limiter { width:560px; }
 /**
  * Header blocks ======================================================
  */
+body.header-fixed #global { z-index:1000; }
+
 #header,
 #header div.toggle-blocks { float:right; }
 
